wip: create-file-page-v4

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -57,5 +57,24 @@
   "files-supported-x": "Files supported: {{x}}",
   "select-file": "Select file",
   "selected-file": "Selected file",
-  "step-n-of-x": "Step {{n}} of {{x}}"
+  "step-n-of-x": "Step {{n}} of {{x}}",
+  "time": "Time",
+  "size": "Size",
+  "id": "ID",
+  "remove": "Remove",
+  "filter": "Filter",
+  "search": "Search",
+  "select-all": "Select All",
+  "file-action-type": "File action type",
+  "select-action-type-associated-with-file": "Select an action type associated with this file",
+  "applicable-store(s)": "Applicable store(s)",
+  "select-where-you-wish-to-apply-change": "Select where you wish to apply this change",
+  "single-store": "Single store",
+  "select-store-file-will-affect": "Select which store this file upload will affect",
+  "multiple-stores": "Multiple stores",
+  "select-stores-file-will-affect": "Select which stores this file upload will affect",
+  "all-stores": "All stores",
+  "file-will-affect-all-stores-account-access": "This file upload will affect all stores for which your account has edit access",
+  "address": "Address",
+  "add-store": "Add store"
 }
